feat: new new utility router implemented for manage routes
