# docs/swagger.json
@@ -180,6 +180,11 @@
         },
         "/todos": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get All Todos",
                 "consumes": [
                     "application/json"
@@ -206,6 +211,11 @@
         },
         "/todos/create": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Creates a new todo item",
                 "consumes": [
                     "application/json"
@@ -252,6 +262,11 @@
         },
         "/todos/delete/{id}": {
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete a todo by ID",
                 "consumes": [
                     "application/json"
@@ -299,6 +314,11 @@
         },
         "/todos/update/{id}": {
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update todo details by ID",
                 "consumes": [
                     "application/json"
@@ -358,6 +378,11 @@
         },
         "/todos/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves a todo item by its ID",
                 "consumes": [
                     "application/json"
@@ -587,7 +612,7 @@
         }
     },
     "securityDefinitions": {
-        "AccessTokenAuth": {
+        "BearerAuth": {
             "description": "Provide the access token directly, without \"Bearer \".",
             "type": "apiKey",
             "name": "Authorization",
